--- a/src/styles/_educationComponent.scss
+++ b/src/styles/_educationComponent.scss
@@ -1,6 +1,6 @@
 .educationComponentWrapper {
   height: $componentHeightRegular;
-  min-height:  650px;
+  min-height:  550px;
   display: flex;
   flex-direction: column;
   margin-top: $componentMargin;
