--- a/src/styles/_headerComponent.scss
+++ b/src/styles/_headerComponent.scss
@@ -1,10 +1,9 @@
 .headerComponent {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
   background: linear-gradient(to bottom, rgba(0, 0, 0, .30) 0%, rgba(0, 0, 0, .10) 100%), url('../content/BackgroundImages/backgroundImage.jpg' ) bottom center no-repeat;
   height: 100vh;
-  min-height: 670px;
+  min-height: 570px;
   width: 100%;
   background-size: cover;
   flex-wrap: wrap;
@@ -12,14 +11,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50%;
+    height: 80%;
     width: 100%;
     .headerWrapper {
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-direction: column;
-      height: 90%;
+      height: 70%;
       width: 100%;
       .headerTextWrapper {
         display: flex;
