--- a/src/styles/_mobileNavBarExpanded.scss
+++ b/src/styles/_mobileNavBarExpanded.scss
@@ -21,7 +21,7 @@
       justify-content: space-between;
       height: 100%;
       width: 100%;
-      min-height: 400px;
+      min-height: 300px;
       text-align: center;
       .buttonContainer {
           width: 100%;
