--- a/src/styles/_toolsComponent.scss
+++ b/src/styles/_toolsComponent.scss
@@ -7,11 +7,11 @@
   margin-top: $componentMargin;
   @include tablet {
     height: 85vh;
-    min-height: 600px;
+    min-height: 550px;
   }
   @include desktop {
     height: 90vh;
-    min-height: 650px;
+    min-height: 550px;
   }
   .left {
     display: flex;
