--- a/src/styles/_toolsHero.scss
+++ b/src/styles/_toolsHero.scss
@@ -11,7 +11,7 @@
   margin-top: $componentMargin;
   @include tablet {
     height: 85vh;
-    min-height: 575px;
+    min-height: 570px;
   }
   @include desktop {
     height: 90vh;
